# zero2prod

./: Cargo.toml  Dockerfile  LICENSE  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221015205000_create_subscriptions_table.sql  20221103083725_make_status_not_null_in_subscriptions.sql
scripts/: build.sh  dev.sh  init_db.sh  update-sqlx.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
