[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0", features = ["derive"]}
serde-aux = "4.0"
config = "0.13"
uuid = {version = "1.2", features = ["v4"]}
chrono = {version = "0.4", default-features = false}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.6"
tracing-log = "0.1"
secrecy = {version = "0.8", features = ["serde"]}
unicode-segmentation = "1.10"
validator = "0.16"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1.15"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
wiremock = "0.5"
tokio = {version = "1", features = ["macros", "rt"]}